# 102V_fastAPI

./: AGENTS.md  README.md  database.db  main.py  pyproject.toml
db/: database.py
models/: posts.py  users.py
